@@ -1002,4 +1002,11 @@ exp=$'===\nOK'
 	"(expected $(printf %q "$exp"), got $(printf %q "$got"))"
 
 # ======
+# https://github.com/ksh93/ksh/issues/591
+(ulimit -n 2147483648; "$SHELL" --version) 2>/dev/null
+let "$? < 128" || err_exit "crash on huge RLIMIT_NOFILE"
+(ulimit -n 8; "$SHELL" --version) 2>/dev/null
+let "$? < 128" || err_exit "crash on tiny RLIMIT_NOFILE"
+
+# ======
 exit $((Errors<125?Errors:125))
